@@ -76,6 +76,7 @@ Applied Patch #1239456: wxPython wx.DataObject.GetAllFormats fix.
 Applied Patch # #1230107 which allows image handlers to be written in
 Python by deriving from wx.PyImageHandler.
 
+Applied patch #1072210: generalize printout.py to allow text printing.
 
 
 
